[gd_scene load_steps=8 format=3 uid="uid://b7jvbyhdaelhd"]

[ext_resource type="PackedScene" uid="uid://cpvv0klmpg14s" path="res://Actors/SwordActor.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://ccehjue61qu1q" path="res://Actors/EnemyActor.tscn" id="3"]
[ext_resource type="Script" path="res://Maps/GameWorld.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://h7grqhwirob6" path="res://Interface/HUD.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://61oikiik36f6" path="res://WIP/Tutorial2.png" id="6"]
[ext_resource type="PackedScene" uid="uid://co2efqqfektmq" path="res://Interface/Ui.tscn" id="7"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 5.71925
height = 11.4385

[node name="GameWorld" type="Node"]
script = ExtResource("4")

[node name="Map" type="Sprite2D" parent="."]
position = Vector2(490.893, 228.354)
scale = Vector2(1.58372, 1.28944)
texture = ExtResource("6")

[node name="Players" type="Node" parent="."]

[node name="PlayableActor" parent="Players" groups=["players"] instance=ExtResource("1")]
position = Vector2(410.426, 233.264)

[node name="Boss" type="Node" parent="."]

[node name="EnemyActor" parent="Boss" groups=["enemy"] instance=ExtResource("3")]
z_index = 0
position = Vector2(471.198, 244.276)
max_health = 100
cur_health = 100

[node name="HUD" parent="." instance=ExtResource("5")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(-2.82843, 14.1421)
polygon = PackedVector2Array(-144.634, 369.824, -99.6848, 243.966, 627.187, 8.46744, 696.109, 17.4573, 1122.93, 257.451, 1122.93, -154.584, -228.539, -157.58, -225.543, 669.485, 1275.23, 654.912, 1269.77, -154.584, 1125.93, -154.584, 1128.93, 576.59, -141.637, 579.587)

[node name="StonesArea" type="Area2D" parent="."]
position = Vector2(761.092, 128.434)

[node name="StonesShape" type="CollisionShape2D" parent="StonesArea"]
position = Vector2(-415.342, 241.033)
rotation = 1.61453
shape = SubResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Ui" parent="CanvasLayer" instance=ExtResource("7")]
grow_horizontal = 2
grow_vertical = 2

[connection signal="body_entered" from="StonesArea" to="." method="_on_StonesArea_body_entered"]
[connection signal="body_exited" from="StonesArea" to="." method="_on_StonesArea_body_exited"]
